--- a/index.html
+++ b/index.html
@@ -108,17 +108,86 @@
   {
     "@context": "https://schema.org",
     "@type": "ItemList",
-    "name": "Tools List",
     "itemListOrder": "https://schema.org/ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
-      { "@type": "ListItem", "position": 1, "name": "Image Tools", "url": "https://www.alltoolai.com/image-tools" },
-      { "@type": "ListItem", "position": 2, "name": "PDF Tools", "url": "https://www.alltoolai.com/pdf-tools" },
-      { "@type": "ListItem", "position": 3, "name": "Text Tools", "url": "https://www.alltoolai.com/text-tools" },
-      { "@type": "ListItem", "position": 4, "name": "Calculator Tools", "url": "https://www.alltoolai.com/calculator-tools" },
-      { "@type": "ListItem", "position": 5, "name": "Unit Converter Tools", "url": "https://www.alltoolai.com/unit-converter-tools" },
-      { "@type": "ListItem", "position": 6, "name": "Qr Generator Tools", "url": "https://www.alltoolai.com/qr-generator-tools" },
-      { "@type": "ListItem", "position": 7, "name": "Audio Tools", "url": "https://www.alltoolai.com/audio-tools" }
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Image Tools",
+          "url": "https://www.alltoolai.com/image-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "WebApplication",
+          "name": "PDF Tools",
+          "url": "https://www.alltoolai.com/pdf-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Text Tools",
+          "url": "https://www.alltoolai.com/text-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+          {
+        "@type": "ListItem",
+        "position": 4,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Calculator Tools",
+          "url": "https://www.alltoolai.com/calculator-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+          {
+        "@type": "ListItem",
+        "position": 5,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Unit Converter Tools",
+          "url": "https://www.alltoolai.com/unit-converter-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+          {
+        "@type": "ListItem",
+        "position": 6,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Qr Generator Tools",
+          "url": "https://www.alltoolai.com/qr-generator-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "item": {
+          "@type": "WebApplication",
+          "name": "Audio Tools",
+          "url": "https://www.alltoolai.com/audio-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
+        }
+      }
     ]
   }
   </script>
