--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "logo": "https://www.alltoolai.com/assets/icon/favicon.svg",
     "sameAs": [
       "https://www.facebook.com/alltoolai",
       "https://twitter.com/alltoolai",
