--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -90,7 +90,7 @@
     "url": "https://www.alltoolai.com/",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.alltoolai.com/assets/assets/svg/logo.svg"
+      "url": "https://www.alltoolai.com/assets/icon/favicon.svg"
     },
     "sameAs": [
       "https://www.facebook.com/alltoolai",
