--- a/unit-converter-tools.html
+++ b/unit-converter-tools.html
@@ -80,7 +80,7 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "logo": "https://www.alltoolai.com/assets/icon/favicon.svg",
     "description": "All Tool AI offers free, fast, and privacy-focused online tools including unit converters, calculators, and AI utilities.",
     "sameAs": [
       "https://twitter.com/alltoolai",
