--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -79,7 +79,7 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "logo": "https://www.alltoolai.com/assets/icon/favicon.svg",
     "description": "All Tool AI offers free online calculators for health, finance, and mathematics, designed to be fast, accurate, and privacy-first.",
     "sameAs": [
       "https://www.facebook.com/alltoolai",
