--- a/image-tools.html
+++ b/image-tools.html
@@ -84,7 +84,7 @@
     "url": "https://www.alltoolai.com/",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.alltoolai.com/assets/svg/logo.svg"
+      "url": "https://www.alltoolai.com/assets/icon/favicon.svg"
     },
     "sameAs": [
       "https://www.facebook.com/alltoolai",
