--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/assets/icon/favicon.svg",
+    "logo": "https://www.alltoolai.com/assets/svg/logo.svg",
     "sameAs": [
       "https://www.facebook.com/alltoolai",
       "https://twitter.com/alltoolai",
@@ -84,24 +84,19 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebApplication",
+    "@type": "Offer",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "applicationCategory": "UtilitiesApplication",
-    "operatingSystem": "Web",
-    "description": "Your all-in-one AI assistant for everyday tasks — free tools for image editing, PDF conversion, text formatting, QR generation, unit conversion, and calculators.",
-    "isAccessibleForFree": true,
-    "provider": {
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
       "@type": "Organization",
       "name": "All Tool AI",
       "url": "https://www.alltoolai.com/"
     },
-    "offers": {
-      "@type": "Offer",
-      "price": "0",
-      "priceCurrency": "USD",
-      "availability": "https://schema.org/InStock"
-    }
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
   </script>
   <script type="application/ld+json">
