--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
   {
     "@context": "https://schema.org",
     "@type": "Offer",
-    "name": "All Tool AI",
+    "name": "All Tool AI — Lifetime Free Access",
     "url": "https://www.alltoolai.com/",
     "priceCurrency": "USD",
-    "price": "0.00",
+    "price": "0",
     "availability": "https://schema.org/InStock",
     "itemCondition": "https://schema.org/NewCondition",
     "seller": {
