--- a/image-tools.html
+++ b/image-tools.html
@@ -117,13 +117,13 @@
     "@type": "BreadcrumbList",
     "itemListElement": [
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 1,
         "name": "Home",
         "item": "https://www.alltoolai.com/"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 2,
         "name": "Image Tools",
         "item": "https://www.alltoolai.com/image-tools"
@@ -141,43 +141,43 @@
     "numberOfItems": 7,
     "itemListElement": [
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 1,
         "name": "Image Cropper",
         "url": "https://www.alltoolai.com/image-crop"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 2,
         "name": "Image Resize",
         "url": "https://www.alltoolai.com/image-resize"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 3,
         "name": "Images Compressor",
         "url": "https://www.alltoolai.com/images-compress"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 4,
         "name": "Images Converter",
         "url": "https://www.alltoolai.com/images-convert"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 5,
         "name": "Image Rotate & Flip",
         "url": "https://www.alltoolai.com/image-rotate-flip"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 6,
         "name": "Image to Base64",
         "url": "https://www.alltoolai.com/image-to-base64"
       },
       {
-        "@type": "ListItem",
+        "@type": "WebPage",
         "position": 7,
         "name": "Base64 to Image",
         "url": "https://www.alltoolai.com/base64-to-image"
