--- a/image-tools.html
+++ b/image-tools.html
@@ -44,7 +44,6 @@
     }
   }
   </script>
-  
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -59,7 +58,6 @@
     }
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -75,7 +73,6 @@
     }
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -92,7 +89,6 @@
     ]
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -110,20 +106,19 @@
     "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "BreadcrumbList",
     "itemListElement": [
       {
-        "@type": "WebPage",
+        "@type": "ListItem",
         "position": 1,
         "name": "Home",
         "item": "https://www.alltoolai.com/"
       },
       {
-        "@type": "WebPage",
+        "@type": "ListItem",
         "position": 2,
         "name": "Image Tools",
         "item": "https://www.alltoolai.com/image-tools"
@@ -131,7 +126,6 @@
     ]
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -185,7 +179,6 @@
     ]
   }
   </script>
-
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
