--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
   {
     "@context": "https://schema.org",
     "@type": "Offer",
-    "name": "All Tool AI — Lifetime Free Access",
-    "url": "https://www.alltoolai.com/",
+    "url": "https://www.alltoolai.com/image-tools",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
     "priceCurrency": "USD",
-    "price": "0",
+    "price": "0.00",
     "availability": "https://schema.org/InStock",
     "itemCondition": "https://schema.org/NewCondition",
     "seller": {
