--- a/index.html
+++ b/index.html
@@ -105,16 +105,72 @@
     "@context": "https://schema.org",
     "@type": "ItemList",
     "name": "Tools List",
-    "itemListOrder": "https://schema.org/ItemListOrderAscending",
+    "itemListOrder": "ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
-      { "@type": "WebPage", "position": 1, "name": "Image Tools", "url": "https://www.alltoolai.com/image-tools" },
-      { "@type": "WebPage", "position": 2, "name": "PDF Tools", "url": "https://www.alltoolai.com/pdf-tools" },
-      { "@type": "WebPage", "position": 3, "name": "Text Tools", "url": "https://www.alltoolai.com/text-tools" },
-      { "@type": "WebPage", "position": 4, "name": "Calculator Tools", "url": "https://www.alltoolai.com/calculator-tools" },
-      { "@type": "WebPage", "position": 5, "name": "Unit Converter Tools", "url": "https://www.alltoolai.com/unit-converter-tools" },
-      { "@type": "WebPage", "position": 6, "name": "Qr Generator Tools", "url": "https://www.alltoolai.com/qr-generator-tools" },
-      { "@type": "WebPage", "position": 7, "name": "Audio Tools", "url": "https://www.alltoolai.com/audio-tools" }
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "WebPage",
+          "name": "Image Tools",
+          "url": "https://www.alltoolai.com/image-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "WebPage",
+          "name": "PDF Tools",
+          "url": "https://www.alltoolai.com/pdf-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@type": "WebPage",
+          "name": "Text Tools",
+          "url": "https://www.alltoolai.com/text-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "item": {
+          "@type": "WebPage",
+          "name": "Calculator Tools",
+          "url": "https://www.alltoolai.com/calculator-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "item": {
+          "@type": "WebPage",
+          "name": "Unit Converter Tools",
+          "url": "https://www.alltoolai.com/unit-converter-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "item": {
+          "@type": "WebPage",
+          "name": "QR Generator Tools",
+          "url": "https://www.alltoolai.com/qr-generator-tools"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "item": {
+          "@type": "WebPage",
+          "name": "Audio Tools",
+          "url": "https://www.alltoolai.com/audio-tools"
+        }
+      }
     ]
   }
   </script>
