--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
   {
     "@context": "https://schema.org",
     "@type": "ItemList",
-    "name": "Tools List",
-    "itemListOrder": "ItemListOrderAscending",
+    "itemListOrder": "https://schema.org/ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
       {
@@ -114,7 +113,9 @@
         "item": {
           "@type": "WebPage",
           "name": "Image Tools",
-          "url": "https://www.alltoolai.com/image-tools"
+          "url": "https://www.alltoolai.com/image-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -123,7 +124,9 @@
         "item": {
           "@type": "WebPage",
           "name": "PDF Tools",
-          "url": "https://www.alltoolai.com/pdf-tools"
+          "url": "https://www.alltoolai.com/pdf-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -132,34 +135,42 @@
         "item": {
           "@type": "WebPage",
           "name": "Text Tools",
-          "url": "https://www.alltoolai.com/text-tools"
+          "url": "https://www.alltoolai.com/text-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 4,
         "item": {
           "@type": "WebPage",
           "name": "Calculator Tools",
-          "url": "https://www.alltoolai.com/calculator-tools"
+          "url": "https://www.alltoolai.com/calculator-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 5,
         "item": {
           "@type": "WebPage",
           "name": "Unit Converter Tools",
-          "url": "https://www.alltoolai.com/unit-converter-tools"
+          "url": "https://www.alltoolai.com/unit-converter-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
-      {
+          {
         "@type": "ListItem",
         "position": 6,
         "item": {
           "@type": "WebPage",
-          "name": "QR Generator Tools",
-          "url": "https://www.alltoolai.com/qr-generator-tools"
+          "name": "Qr Generator Tools",
+          "url": "https://www.alltoolai.com/qr-generator-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       },
       {
@@ -168,7 +179,9 @@
         "item": {
           "@type": "WebPage",
           "name": "Audio Tools",
-          "url": "https://www.alltoolai.com/audio-tools"
+          "url": "https://www.alltoolai.com/audio-tools",
+          "applicationCategory": "UtilitiesApplication",
+          "operatingSystem": "Web"
         }
       }
     ]
