--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         "@type": "ListItem",
         "position": 1,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Image Tools",
           "url": "https://www.alltoolai.com/image-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -122,7 +122,7 @@
         "@type": "ListItem",
         "position": 2,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "PDF Tools",
           "url": "https://www.alltoolai.com/pdf-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -133,7 +133,7 @@
         "@type": "ListItem",
         "position": 3,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Text Tools",
           "url": "https://www.alltoolai.com/text-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -144,7 +144,7 @@
         "@type": "ListItem",
         "position": 4,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Calculator Tools",
           "url": "https://www.alltoolai.com/calculator-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -155,7 +155,7 @@
         "@type": "ListItem",
         "position": 5,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Unit Converter Tools",
           "url": "https://www.alltoolai.com/unit-converter-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -166,7 +166,7 @@
         "@type": "ListItem",
         "position": 6,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Qr Generator Tools",
           "url": "https://www.alltoolai.com/qr-generator-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -177,7 +177,7 @@
         "@type": "ListItem",
         "position": 7,
         "item": {
-          "@type": "WebSite",
+          "@type": "WebApplication",
           "name": "Audio Tools",
           "url": "https://www.alltoolai.com/audio-tools",
           "applicationCategory": "UtilitiesApplication",
