--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         "@type": "ListItem",
         "position": 1,
         "item": {
+          "@type": "Web",
           "name": "Image Tools",
           "url": "https://www.alltoolai.com/image-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -121,6 +122,7 @@
         "@type": "ListItem",
         "position": 2,
         "item": {
+          "@type": "Web",
           "name": "PDF Tools",
           "url": "https://www.alltoolai.com/pdf-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -131,6 +133,7 @@
         "@type": "ListItem",
         "position": 3,
         "item": {
+          "@type": "Web",
           "name": "Text Tools",
           "url": "https://www.alltoolai.com/text-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -141,6 +144,7 @@
         "@type": "ListItem",
         "position": 4,
         "item": {
+          "@type": "Web",
           "name": "Calculator Tools",
           "url": "https://www.alltoolai.com/calculator-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -151,6 +155,7 @@
         "@type": "ListItem",
         "position": 5,
         "item": {
+          "@type": "Web",
           "name": "Unit Converter Tools",
           "url": "https://www.alltoolai.com/unit-converter-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -161,6 +166,7 @@
         "@type": "ListItem",
         "position": 6,
         "item": {
+          "@type": "Web",
           "name": "QR Generator Tools",
           "url": "https://www.alltoolai.com/qr-generator-tools",
           "applicationCategory": "UtilitiesApplication",
@@ -171,6 +177,7 @@
         "@type": "ListItem",
         "position": 7,
         "item": {
+          "@type": "Web",
           "name": "Audio Tools",
           "url": "https://www.alltoolai.com/audio-tools",
           "applicationCategory": "UtilitiesApplication",
