--- a/index.html
+++ b/index.html
@@ -104,85 +104,65 @@
   {
     "@context": "https://schema.org",
     "@type": "ItemList",
+    "name": "Tools List",
     "itemListOrder": "https://schema.org/ItemListOrderAscending",
     "numberOfItems": 7,
     "itemListElement": [
       {
         "@type": "ListItem",
         "position": 1,
-        "item": {
-          "@type": "Web",
-          "name": "Image Tools",
-          "url": "https://www.alltoolai.com/image-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "Image Tools",
+        "url": "https://www.alltoolai.com/image-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
       {
         "@type": "ListItem",
         "position": 2,
-        "item": {
-          "@type": "Web",
-          "name": "PDF Tools",
-          "url": "https://www.alltoolai.com/pdf-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "PDF Tools",
+        "url": "https://www.alltoolai.com/pdf-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
       {
         "@type": "ListItem",
         "position": 3,
-        "item": {
-          "@type": "Web",
-          "name": "Text Tools",
-          "url": "https://www.alltoolai.com/text-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "Text Tools",
+        "url": "https://www.alltoolai.com/text-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
-          {
+      {
         "@type": "ListItem",
         "position": 4,
-        "item": {
-          "@type": "Web",
-          "name": "Calculator Tools",
-          "url": "https://www.alltoolai.com/calculator-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "Calculator Tools",
+        "url": "https://www.alltoolai.com/calculator-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
-          {
+      {
         "@type": "ListItem",
         "position": 5,
-        "item": {
-          "@type": "Web",
-          "name": "Unit Converter Tools",
-          "url": "https://www.alltoolai.com/unit-converter-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "Unit Converter Tools",
+        "url": "https://www.alltoolai.com/unit-converter-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
-          {
+      {
         "@type": "ListItem",
         "position": 6,
-        "item": {
-          "@type": "Web",
-          "name": "QR Generator Tools",
-          "url": "https://www.alltoolai.com/qr-generator-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "QR Generator Tools",
+        "url": "https://www.alltoolai.com/qr-generator-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       },
       {
         "@type": "ListItem",
         "position": 7,
-        "item": {
-          "@type": "Web",
-          "name": "Audio Tools",
-          "url": "https://www.alltoolai.com/audio-tools",
-          "applicationCategory": "UtilitiesApplication",
-          "operatingSystem": "Web"
-        }
+        "name": "Audio Tools",
+        "url": "https://www.alltoolai.com/audio-tools",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
       }
     ]
   }
