--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
   {
     "@context": "https://schema.org",
     "@type": "Offer",
-    "url": "https://www.alltoolai.com/image-tools",
+    "name": "All Tool AI — Lifetime Free Access",
+    "url": "https://www.alltoolai.com/",
     "applicationCategory": "UtilitiesApplication",
     "operatingSystem": "Web",
     "priceCurrency": "USD",
-    "price": "0.00",
+    "price": "0",
     "availability": "https://schema.org/InStock",
     "itemCondition": "https://schema.org/NewCondition",
     "seller": {
