--- a/age-calculator.html
+++ b/age-calculator.html
@@ -71,7 +71,7 @@
     "@context": "https://schema.org",
     "@type": "SoftwareApplication",
     "name": "Age Calculator",
-    "operatingSystem": "Any",
+    "operatingSystem": "Web",
     "applicationCategory": "UtilitiesApplication",
     "description": "Free online age calculator that computes your exact age in years, months, days, hours, and minutes from your date of birth.",
     "url": "https://www.alltoolai.com/age-calculator",
