--- a/age-calculator.html
+++ b/age-calculator.html
@@ -69,7 +69,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
     "name": "Age Calculator",
     "operatingSystem": "Web",
     "applicationCategory": "UtilitiesApplication",
