--- a/base64-to-image.html
+++ b/base64-to-image.html
@@ -52,17 +52,20 @@
     "url": "https://www.alltoolai.com/base64-to-image",
     "description": "Free online Base64 to Image converter. Decode Base64 strings and preview images instantly. 100% private, client-side, and unlimited use.",
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/base64-to-image"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com",
-      "name": "All Tool AI"
+      "url": "https://www.alltoolai.com/image-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
     "name": "Base64 to Image Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -81,8 +84,12 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
+      "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/base64-to-image"
     }
   }
   </script>
