--- a/image-crop.html
+++ b/image-crop.html
@@ -53,16 +53,20 @@
     "url": "https://www.alltoolai.com/image-crop",
     "description": "Crop images online for free. Fast, secure, and unlimited tool that works directly in your browser. Supports PNG, JPG, and WEBP formats.",
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-crop"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/image-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
     "name": "Image Cropper",
     "operatingSystem": "Web",
     "applicationCategory": "MultimediaApplication",
@@ -81,8 +85,12 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
+      "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-crop"
     }
   }
   </script>
