--- a/image-resize.html
+++ b/image-resize.html
@@ -51,23 +51,25 @@
     "url": "https://www.alltoolai.com/image-resize",
     "description": "Resize images online free, fast, and private. Works directly in your browser — no upload, no watermarks, and supports PNG, JPG, and WebP.",
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-resize"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/",
-      "name": "All Tool AI"
+      "url": "https://www.alltoolai.com/image-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
     "name": "All Tool AI Image Resizer",
     "operatingSystem": "Web",
     "applicationCategory": "MultimediaApplication",
     "applicationSubCategory": "Image Editing",
     "url": "https://www.alltoolai.com/image-resize",
-    "image": "https://www.alltoolai.com/icons/image-resize.png",
     "description": "Resize images online instantly. 100% private, browser-based, supports JPG, PNG, and WebP formats.",
     "featureList": [
       "Resize images directly in the browser",
@@ -81,6 +83,15 @@
       "price": "0",
       "priceCurrency": "USD",
       "category": "Free"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-resize"
     }
   }
   </script>
