--- a/images-compress.html
+++ b/images-compress.html
@@ -52,30 +52,49 @@
     "name": "Free Online Image Compressor - Compress JPG, PNG, WebP by Size or Quality",
     "description": "Compress images to a target size or quality level directly in your browser. 100% private, free, and unlimited. Supports JPG, PNG, and WebP.",
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-compress"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/image-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "All Tool AI - Image Compressor",
-    "description": "A free online image compressor to reduce file size or quality for JPG, PNG, and WebP images. Fast, private, and unlimited use directly in your browser.",
-    "image": "https://www.alltoolai.com/assets/icons/image-compressor.png",
-    "brand": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
-    },
+    "@type": "WebPage",
+    "name": "AllToolAI Image Compressor",
+    "url": "https://www.alltoolai.com/images-compress",
+    "description": "Compress images locally in your browser to a target size or specific quality. Supports JPG, PNG, WebP. Batch compression and ZIP download.",
+    "applicationCategory": "ImageEditingApplication",
+    "operatingSystem": "Web",
+    "browserRequirements": "Runs in modern browsers such as Chrome, Edge, Firefox, Safari",
+    "featureList": [
+      "Target size compression (KB / MB)",
+      "Quality-based compression",
+      "Batch compression",
+      "ZIP download",
+      "Local processing (no upload)",
+      "Exif removal for privacy"
+    ],
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock",
       "url": "https://www.alltoolai.com/images-compress"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-compress"
     }
   }
   </script>
@@ -444,8 +463,7 @@
 
 <div id="footer-placeholder"></div>
 
-  <script src="/assets/img/compress.js" defer></script>
+<script src="/assets/img/compress.js" defer></script>
 
 </body>
-
 </html>
