--- a/images-convert.html
+++ b/images-convert.html
@@ -51,22 +51,25 @@
     "url": "https://www.alltoolai.com/images-convert",
     "name": "Free Online Image Converter | PNG ↔ JPG ↔ WebP",
     "description": "Batch convert images to PNG, JPG, or WebP with full quality control. 100% private—files stay on your device. Free, fast, and secure browser-based converter.",
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-convert"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
-    },
-    "inLanguage": "en"
+      "url": "https://www.alltoolai.com/image-tools"
+    }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
     "name": "All Tool AI Image Converter",
     "applicationCategory": "MultimediaApplication",
     "operatingSystem": "Web",
     "url": "https://www.alltoolai.com/images-convert",
-    "image": "https://www.alltoolai.com/icons/image-convert.png",
     "description": "Free online image converter to convert PNG, JPG, and WebP locally in your browser with full privacy and batch processing.",
     "featureList": [
       "Batch image conversion",
@@ -79,6 +82,15 @@
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-convert"
     }
   }
   </script>
@@ -437,8 +449,7 @@
 
 <div id="footer-placeholder"></div>
 
-  <script src="/assets/img/convert.js" defer></script>
+<script src="/assets/img/convert.js" defer></script>
 
 </body>
-
 </html>
