--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         "position": 1,
         "name": "Image Tools",
         "url": "https://www.alltoolai.com/image-tools",
-        "applicationCategory": "UtilitiesApplication",
+        "applicationCategory": "MultimediaApplication",
         "operatingSystem": "Web"
       },
       {
@@ -122,7 +122,7 @@
         "position": 2,
         "name": "PDF Tools",
         "url": "https://www.alltoolai.com/pdf-tools",
-        "applicationCategory": "UtilitiesApplication",
+        "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web"
       },
       {
@@ -146,7 +146,7 @@
         "position": 5,
         "name": "Unit Converter Tools",
         "url": "https://www.alltoolai.com/unit-converter-tools",
-        "applicationCategory": "UtilitiesApplication",
+        "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web"
       },
       {
@@ -162,7 +162,7 @@
         "position": 7,
         "name": "Audio Tools",
         "url": "https://www.alltoolai.com/audio-tools",
-        "applicationCategory": "UtilitiesApplication",
+        "applicationCategory": "AudioApplication",
         "operatingSystem": "Web"
       }
     ]
