--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -51,28 +51,40 @@
     "name": "Rotate & Flip Images Online 90/180/270°, Mirror, Straighten",  
     "url": "https://www.alltoolai.com/image-rotate-flip",  
     "description": "Free online image rotator and flipper to rotate, mirror, or straighten images in your browser. 100% private, no upload, no watermark, and full-resolution export.",  
-    "inLanguage": "en"  
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-rotate-flip"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/image-tools"
+    }  
   }  
   </script>
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "WebPage",  
     "name": "Image Rotate & Flip",  
-    "operatingSystem": "Any",  
-    "applicationCategory": "WebApplication",  
+    "operatingSystem": "Web",  
+    "applicationCategory": "GraphicApplication",  
     "description": "Online tool to rotate, flip, or straighten images instantly in your browser. Free, private, and high quality.",  
     "url": "https://www.alltoolai.com/image-rotate-flip",  
-    "image": "https://www.alltoolai.com/assets/tools/image-rotate-flip.jpg",  
     "offers": {  
       "@type": "Offer",  
       "price": "0",  
       "priceCurrency": "USD"  
     },  
-    "publisher": {  
-      "@type": "Organization",  
-      "name": "All Tool AI"  
-    }  
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-rotate-flip"
+    } 
   }  
   </script>
   <script type="application/ld+json">  
