--- a/image-to-base64.html
+++ b/image-to-base64.html
@@ -31,6 +31,128 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-to-base64" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-to-base64" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/image-to-base64",
+    "name": "Image to Base64 Converter – AllToolAI",
+    "description": "Convert image files (PNG, JPG, WebP) to Base64 string or Data URI in browser without uploading.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-to-base64"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/image-tools"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "AllToolAI Base64 to Image Converter",
+    "url": "https://www.alltoolai.com/image-to-base64",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Web",
+    "description": "Online tool to convert images (PNG, JPG, WebP) into Base64-encoded string or Data URI.",
+    "featureList": [
+      "Instant Base64 decoding and image preview",
+      "Supports PNG, JPG, JPEG, WebP, and SVG",
+      "100% privacy – processed locally in your browser",
+      "Free and unlimited use"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/image-to-base64"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Image to Base64",
+        "item": "https://www.alltoolai.com/image-to-base64"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Your first FAQ question goes here?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The answer to your first question goes here."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Your second FAQ question goes here?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The answer to your second question goes here."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Your third FAQ question goes here?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The answer to your third question goes here."
+        }
+      }
+    ]
+  }
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
