--- a/image-tools.html
+++ b/image-tools.html
@@ -51,7 +51,7 @@
     "url": "https://www.alltoolai.com/image-tools",
     "applicationCategory": "MultimediaApplication",
     "operatingSystem": "Web"
-    "name": "Free Online Image Tools – All Tool AI",
+    "name": "Free Online Image Tools | All Tool AI",
     "description": "Top, all-in-one AI tools to crop, resize, compress, convert, rotate, and Base64 encode/decode images. Lifetime free, no sign up, 100% confidential and secure.",
     "inLanguage": "en",
     "mainEntityOfPage": {
