--- a/image-tools.html
+++ b/image-tools.html
@@ -53,15 +53,7 @@
     "operatingSystem": "Web"
     "name": "Free Online Image Tools | All Tool AI",
     "description": "Top, all-in-one AI tools to crop, resize, compress, convert, rotate, and Base64 encode/decode images. Lifetime free, no sign up, 100% confidential and secure.",
-    "inLanguage": "en",
-    "mainEntityOfPage": {
-      "@type": "WebPage",
-      "@id": "https://www.alltoolai.com/image-tools"
-    },
-    "isPartOf": {
-      "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
-    }
+    "inLanguage": "en"
   }
   </script>
   <script type="application/ld+json">
