--- a/image-crop.html
+++ b/image-crop.html
@@ -66,7 +66,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Web",
+    "@type": "CollectionPage",
     "name": "Image Cropper",
     "operatingSystem": "Web",
     "applicationCategory": "MultimediaApplication",
