--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -65,7 +65,7 @@
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "WebPage",  
+    "@type": "Application",  
     "name": "Image Rotate & Flip",  
     "operatingSystem": "Web",  
     "applicationCategory": "GraphicApplication",  
@@ -493,3 +493,4 @@
 </body>
 
 </html>
+
