--- a/image-resize.html
+++ b/image-resize.html
@@ -64,7 +64,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "Web",
     "name": "All Tool AI Image Resizer",
     "operatingSystem": "Web",
     "applicationCategory": "MultimediaApplication",
