--- a/image-to-base64.html
+++ b/image-to-base64.html
@@ -67,7 +67,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "SoftwareApplication",
     "name": "AllToolAI Base64 to Image Converter",
     "url": "https://www.alltoolai.com/image-to-base64",
     "applicationCategory": "UtilitiesApplication",
