--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -44,13 +44,13 @@
     }  
   }  
   </script>
-  <script type="application/ld+json">  
-  {  
-    "@context": "https://schema.org",  
-    "@type": "Software",  
-    "name": "Rotate & Flip Images Online 90/180/270°, Mirror, Straighten",  
-    "url": "https://www.alltoolai.com/image-rotate-flip",  
-    "description": "Free online image rotator and flipper to rotate, mirror, or straighten images in your browser. 100% private, no upload, no watermark, and full-resolution export.",  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/image-rotate-flip",
+    "name": "Rotate & Flip Images Online 90/180/270°, Mirror, Straighten",
+    "description": "Free online image rotator and flipper to rotate, mirror, or straighten images in your browser. 100% private, no upload, no watermark, and full-resolution export.",
     "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
@@ -60,8 +60,8 @@
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/image-tools"
-    }  
-  }  
+    }
+  }
   </script>
   <script type="application/ld+json">  
   {  
