--- a/base64-to-image.html
+++ b/base64-to-image.html
@@ -51,6 +51,7 @@
     "name": "Base64 to Image Converter",
     "url": "https://www.alltoolai.com/base64-to-image",
     "description": "Free online Base64 to Image converter. Decode Base64 strings and preview images instantly. 100% private, client-side, and unlimited use.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
