--- a/image-crop.html
+++ b/image-crop.html
@@ -52,6 +52,7 @@
     "name": "Free Online Image Cropper | Crop, Resize & Export (PNG/JPG/WEBP)",
     "url": "https://www.alltoolai.com/image-crop",
     "description": "Crop images online for free. Fast, secure, and unlimited tool that works directly in your browser. Supports PNG, JPG, and WEBP formats.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
