--- a/image-resize.html
+++ b/image-resize.html
@@ -50,6 +50,7 @@
     "name": "Free Online Image Resizer (PNG/JPG/WebP) | All Tool AI",
     "url": "https://www.alltoolai.com/image-resize",
     "description": "Resize images online free, fast, and private. Works directly in your browser — no upload, no watermarks, and supports PNG, JPG, and WebP.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
@@ -64,7 +65,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Web",
+    "@type": "Software",
     "name": "All Tool AI Image Resizer",
     "operatingSystem": "Web",
     "applicationCategory": "MultimediaApplication",
