--- a/image-tools.html
+++ b/image-tools.html
@@ -48,11 +48,12 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
+    "name": "Free Online Image Tools | All Tool AI",
     "url": "https://www.alltoolai.com/image-tools",
+    "description": "Top, all-in-one AI tools to crop, resize, compress, convert, rotate, and Base64 encode/decode images. Lifetime free, no sign up, 100% confidential and secure.",
     "applicationCategory": "MultimediaApplication",
     "operatingSystem": "Web",
-    "name": "Free Online Image Tools | All Tool AI",
-    "description": "Top, all-in-one AI tools to crop, resize, compress, convert, rotate, and Base64 encode/decode images. Lifetime free, no sign up, 100% confidential and secure.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
