--- a/images-compress.html
+++ b/images-compress.html
@@ -51,6 +51,7 @@
     "url": "https://www.alltoolai.com/images-compress",
     "name": "Free Online Image Compressor - Compress JPG, PNG, WebP by Size or Quality",
     "description": "Compress images to a target size or quality level directly in your browser. 100% private, free, and unlimited. Supports JPG, PNG, and WebP.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
@@ -65,7 +66,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "Software",
     "name": "AllToolAI Image Compressor",
     "url": "https://www.alltoolai.com/images-compress",
     "description": "Compress images locally in your browser to a target size or specific quality. Supports JPG, PNG, WebP. Batch compression and ZIP download.",
