--- a/images-convert.html
+++ b/images-convert.html
@@ -51,6 +51,7 @@
     "url": "https://www.alltoolai.com/images-convert",
     "name": "Free Online Image Converter | PNG ↔ JPG ↔ WebP",
     "description": "Batch convert images to PNG, JPG, or WebP with full quality control. 100% private—files stay on your device. Free, fast, and secure browser-based converter.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
@@ -65,7 +66,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "Software",
     "name": "All Tool AI Image Converter",
     "applicationCategory": "MultimediaApplication",
     "operatingSystem": "Web",
