--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     "name": "All Tool AI - Free AI Tools: Image, PDF, Text, Audio, QR, Calculator",
     "url": "https://www.alltoolai.com/",
     "description": "All Tool AI is your free, all-in-one online AI toolkit to edit images, convert PDFs, generate and format text, create QR codes, convert units, and run calculators securely and globally.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
     "isPartOf": {
       "@type": "WebSite",
