--- a/base64-to-image.html
+++ b/base64-to-image.html
@@ -66,7 +66,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "Software",
     "name": "Base64 to Image Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
