--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -48,8 +48,8 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "url": "https://www.alltoolai.com/image-rotate-flip",
     "name": "Rotate & Flip Images Online 90/180/270°, Mirror, Straighten",
+    "url": "https://www.alltoolai.com/image-rotate-flip",
     "description": "Free online image rotator and flipper to rotate, mirror, or straighten images in your browser. 100% private, no upload, no watermark, and full-resolution export.",
     "isAccessibleForFree": true,
     "inLanguage": "en",
@@ -66,7 +66,7 @@
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "WebPage",  
+    "@type": "Software",  
     "name": "Image Rotate & Flip",  
     "operatingSystem": "Web",  
     "applicationCategory": "GraphicApplication",  
@@ -492,4 +492,5 @@
   <script src="/assets/img/rotate.js" defer></script>
 
 </body>
+
 </html>
