--- a/image-crop.html
+++ b/image-crop.html
@@ -52,7 +52,6 @@
     "name": "Free Online Image Cropper | Crop, Resize & Export (PNG/JPG/WEBP)",
     "url": "https://www.alltoolai.com/image-crop",
     "description": "Crop images online for free. Fast, secure, and unlimited tool that works directly in your browser. Supports PNG, JPG, and WEBP formats.",
-    "isAccessibleForFree": true,
     "inLanguage": "en",
     "mainEntityOfPage": {
       "@type": "WebPage",
@@ -73,6 +72,8 @@
     "applicationCategory": "MultimediaApplication",
     "url": "https://www.alltoolai.com/image-crop",
     "description": "A free, private, and fast online image cropper that works directly in your browser. Crop, resize, and export images as PNG, JPG, or WEBP instantly.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
     "featureList": [
       "Browser-based image cropping",
       "Free and unlimited usage",
